--- a/style.css
+++ b/style.css
@@ -58,4 +58,28 @@ h1 {
     left: 20px;
     color: rgba(0, 0, 0, 0.1);
   }
-  
+
+  button,
+select {
+  padding: 12px 25px;
+  margin: 10px 5px;
+  cursor: pointer;
+  font-size: 18px;
+  border-radius: 8px;
+  border: none;
+  background-color: #112377;
+  color: white;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s, transform 0.3s;
+}
+
+button:hover,
+select:hover {
+  background-color: #0056b3;
+  transform: translateY(-3px);
+}
+
+button:active,
+select:active {
+  transform: translateY(0);
+}
